[metadata]
name = aiozabbix
version = 1.1.2
license_file = LICENSE.txt
description = Asynchronous Zabbix API Python interface
url = https://gitlab.com/ModioAB/aiozabbix
author = Modio AB
author_email = nili@modio.se
license = LGPL

classifiers =
	Framework :: AsyncIO
	License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
	Programming Language :: Python
	Programming Language :: Python :: 3.6

keywords = zabbix monitoring api

[options]
packages = aiozabbix
requires_python = >=3.6
install_requires =
	aiohttp

[coverage:run]
omit = aiozabbix/test_*.py

[tool:pytest]
addopts = --cov=aiozabbix --cov-report=term --cov-report=xml --junitxml=testreport.xml
junit_family = xunit2
asyncio_mode = auto
